<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.codedwar.edwar.contacto.InformacionContacto">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textSize="@dimen/confirmar_datos"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvNombre"
            android:layout_width="@dimen/tamano_width"
            android:layout_height="@dimen/tamano_height"
            android:src="@drawable/user1"
            />
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="@dimen/titulos_tv"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/espacio_left"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvFecha"
            android:layout_width="@dimen/tamano_width"
            android:layout_height="@dimen/tamano_height"
            android:src="@drawable/fecha"
            />
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="@dimen/titulos_tv"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/espacio_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvTelefono"
            android:layout_width="@dimen/tamano_width"
            android:layout_height="@dimen/tamano_height"
            android:src="@drawable/telefono1"
            />
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textSize="@dimen/titulos_tv"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/espacio_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvEmail"
            android:layout_width="@dimen/tamano_width"
            android:layout_height="@dimen/tamano_height"
            android:src="@drawable/email1"
            />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/titulos_tv"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/espacio_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvDescripcion"
            android:layout_width="@dimen/tamano_width"
            android:layout_height="@dimen/tamano_height"
            android:src="@drawable/descripcion1"
            />
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="@dimen/titulos_tv"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/espacio_left"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_datos"
        android:theme="@style/EstiloBoton"
        />





</LinearLayout>
