<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codedwar.edwar.contacto.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvNombre"
                    android:layout_width="@dimen/tamano_width"
                    android:layout_height="@dimen/tamano_height"
                    android:src="@drawable/user1"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nombre"
                        android:textSize="@dimen/titulos_et"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/espacio_left"
                        android:inputType="text"
                        />


                </android.support.design.widget.TextInputLayout>



            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/titulos_et"
                android:text="@string/fecha"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <DatePicker
                android:id="@+id/dpFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:calendarTextColor="@color/colorAccent"
                android:calendarViewShown="false">

            </DatePicker>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvTelefono"
                android:layout_width="@dimen/tamano_width"
                android:layout_height="@dimen/tamano_height"
                android:src="@drawable/telefono1"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:textSize="@dimen/titulos_et"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/espacio_left"
                    android:inputType="text"
                    />


            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvEmail"
                android:layout_width="@dimen/tamano_width"
                android:layout_height="@dimen/tamano_height"
                android:src="@drawable/email1"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textSize="@dimen/titulos_et"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/espacio_left"
                    android:inputType="text"
                    />


            </android.support.design.widget.TextInputLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvDescripcion"
                android:layout_width="@dimen/tamano_width"
                android:layout_height="@dimen/tamano_height"
                android:src="@drawable/descripcion1"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/descripcion"
                    android:textSize="@dimen/titulos_et"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/espacio_left"
                    android:inputType="text"
                    />


            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:theme="@style/EstiloBoton"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
